--- a/ass1/header.css
+++ b/ass1/header.css
@@ -4,7 +4,6 @@
     border: 2px solid white;
     font-family: monospace;
     padding: 12px;
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -26,7 +25,7 @@ ul {
 .logo {
     font-size: 20px;
     color: red;
-    background-color:  white;
+    background-color: rgb(255, 255, 255);
     padding: 4px 32px;
     font-weight: bolder;
 
